# cstatus

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
client/: App.svelte  Footer.svelte  Nav.svelte  store.js
client/pages/: About.svelte  Catcher.svelte  Common.svelte  Home.svelte
public/: index.html
src/: main.rs  schema.rs
src/server/: ping.rs
src/worker/: mod.rs
